projetGL/src/test/deca/context/invalid/provided/invalide_01_affectation.deca
// Description Affectation et typage
// affectation string <- float
// Resultat : 
// ERROR


{
    string a = 0;
    float b = 0.0;
    a = b;
}